[project]
name = "cn-llm-bridge"
version = "1.0.0"
description = "MCP Bridge — 将国产大模型的多模态能力暴露给 Claude Code（视觉、音频转写、深度合成）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
