[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cn-llm-bridge"
version = "1.0.0"
description = "MCP Bridge — 将国产大模型的多模态能力暴露给 Claude Code（视觉、音频转写、深度合成）"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hugo x", email = "stillaliveness@outlook.com"},
]
requires-python = ">=3.10"
keywords = [
    "mcp",
    "qwen",
    "kimi",
    "whisper",
    "vision",
    "audio-transcription",
    "claude-code",
    "ai-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.12.0",
    "respx>=0.21",
]

[project.scripts]
cn-llm-bridge = "cn_llm_bridge.server:main"
kimi-bridge = "kimi_bridge.server:main"

[project.urls]
Homepage = "https://github.com/maxliven/cn-llm-bridge"
Repository = "https://github.com/maxliven/cn-llm-bridge"
Issues = "https://github.com/maxliven/cn-llm-bridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["cn_llm_bridge", "kimi_bridge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
